--- a/OpenLocationCode_iOS.xcodeproj/xcshareddata/xcschemes/OpenLocationCode_Mac.xcscheme
+++ b/OpenLocationCode_iOS.xcodeproj/xcshareddata/xcschemes/OpenLocationCode_Mac.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D5A3C52F1F283B50001C10B8"
-               BuildableName = "OpenLocationCode.framework"
-               BlueprintName = "OpenLocationCode"
-               ReferencedContainer = "container:OpenLocationCode.xcodeproj">
+               BlueprintIdentifier = "D5B2B8511F2C568C00D62670"
+               BuildableName = "OpenLocationCode_Mac.framework"
+               BlueprintName = "OpenLocationCode_Mac"
+               ReferencedContainer = "container:OpenLocationCode_iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,20 +32,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D5A3C5381F283B50001C10B8"
-               BuildableName = "OpenLocationCodeTests.xctest"
-               BlueprintName = "OpenLocationCodeTests"
-               ReferencedContainer = "container:OpenLocationCode.xcodeproj">
+               BlueprintIdentifier = "D5B2B8591F2C568D00D62670"
+               BuildableName = "OpenLocationCode_MacTests.xctest"
+               BlueprintName = "OpenLocationCode_MacTests"
+               ReferencedContainer = "container:OpenLocationCode_iOS.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D5A3C52F1F283B50001C10B8"
-            BuildableName = "OpenLocationCode.framework"
-            BlueprintName = "OpenLocationCode"
-            ReferencedContainer = "container:OpenLocationCode.xcodeproj">
+            BlueprintIdentifier = "D5B2B8511F2C568C00D62670"
+            BuildableName = "OpenLocationCode_Mac.framework"
+            BlueprintName = "OpenLocationCode_Mac"
+            ReferencedContainer = "container:OpenLocationCode_iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -64,10 +64,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D5A3C52F1F283B50001C10B8"
-            BuildableName = "OpenLocationCode.framework"
-            BlueprintName = "OpenLocationCode"
-            ReferencedContainer = "container:OpenLocationCode.xcodeproj">
+            BlueprintIdentifier = "D5B2B8511F2C568C00D62670"
+            BuildableName = "OpenLocationCode_Mac.framework"
+            BlueprintName = "OpenLocationCode_Mac"
+            ReferencedContainer = "container:OpenLocationCode_iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,10 +82,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D5A3C52F1F283B50001C10B8"
-            BuildableName = "OpenLocationCode.framework"
-            BlueprintName = "OpenLocationCode"
-            ReferencedContainer = "container:OpenLocationCode.xcodeproj">
+            BlueprintIdentifier = "D5B2B8511F2C568C00D62670"
+            BuildableName = "OpenLocationCode_Mac.framework"
+            BlueprintName = "OpenLocationCode_Mac"
+            ReferencedContainer = "container:OpenLocationCode_iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
